Phase 3: LibFutura - User-Space Library and Runtime
Implemented complete user-space library for Futura OS applications:

**LibFutura Components (src/user/libfutura/):**

1. **CRT0 Startup Code (crt0.S)**
   - x86-64 entry point for all userland programs
   - Stack initialization and alignment
   - Calls main(argc, argv, envp)
   - Exit handling

2. **String Functions (string.c)** - ~180 lines
   - strlen, strcpy, strncpy, strcmp, strncmp
   - strcat, strchr
   - memcpy, memset, memcmp, memmove
   - No libc dependencies

3. **Memory Allocator (malloc.c)** - ~120 lines
   - Bump allocator for Phase 3 (malloc, calloc, realloc, free)
   - Heap initialization with linker symbols
   - 16-byte alignment
   - Phase 4: Upgrade to proper malloc/free with free lists

4. **FIPC Wrappers (fipc.c)** - ~140 lines
   - fipc_connect, fipc_disconnect
   - fipc_send_message, fipc_recv_message
   - fipc_create_shared_region, fipc_map_region
   - Zero-copy data transfer support

5. **POSIX API Wrappers (posix.c)** - ~290 lines
   - File operations: open, close, read, write
   - Process operations: fork, execve, waitpid, getpid
   - All communicate with posixd via FIPC
   - Shared memory integration for zero-copy I/O

6. **Linker Script (userland.ld)**
   - User program memory layout (start at 0x400000)
   - Text, rodata, data, bss sections
   - Heap symbols (_heap_start, _heap_end)

7. **Public Header (include/user/libfutura.h)**
   - Complete API documentation
   - POSIX type definitions for freestanding environment
   - File descriptor constants (STDIN, STDOUT, STDERR)

**Build System:**
- Makefile builds libfutura.a static library
- CRT0 object file for linking
- Updated userland Makefile to build libfutura first
- Init Makefile updated to link with CRT0 and libfutura

**Type System Updates:**
- Added POSIX types to futura_posix.h: pid_t, mode_t, off_t, etc.
- Added ssize_t to fut_vfs.h and fut_fipc.h
- Added pid_t forward declaration to futura_init.h
- Forward declared fut_stat in f

--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -3,12 +3,16 @@
 # Licensed under MPL v2.0
 
 # Subdirectories
-USERLAND_DIRS := init fsd posixd futurawayd
+USERLAND_DIRS := libfutura init fsd posixd futurawayd
 
 # Build targets
 .PHONY: all clean $(USERLAND_DIRS)
 
-all: $(USERLAND_DIRS)
+# Build libfutura first, then services
+all: libfutura $(USERLAND_DIRS)
+
+# Ensure services depend on libfutura
+init fsd posixd futurawayd: libfutura
 
 $(USERLAND_DIRS):
 	@echo "Building $@..."
