--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,7 +1,13 @@
-set timeout=0
+serial --unit=0 --speed=115200
+terminal_input serial
+terminal_output serial
+
+set timeout=3
 set default=0
 
 menuentry "Futura OS" {
+    echo "Loading Futura OS kernel..."
     multiboot2 /boot/futura_kernel.elf
+    echo "Booting kernel..."
     boot
 }
