--- a/tests/Makefile
+++ b/tests/Makefile
@@ -23,7 +23,8 @@ TESTS := fipc_remote_loopback \
 	fipc_remote_header_v1 \
 	fipc_sys_metrics_subscriber \
 	fipc_sys_kernel_metrics \
-	fipc_sys_futuraway_metrics
+	fipc_sys_futuraway_metrics \
+	fipc_sys_vfs_metrics
 
 .PHONY: all clean $(TESTS)
 
@@ -127,6 +128,14 @@ FIPC_FWAY_SRCS := fipc_sys_futuraway_metrics.c \
 $(BIN_DIR)/fipc_sys_futuraway_metrics: $(FIPC_FWAY_SRCS) $(LIBFIPC_HOST) | $(BIN_DIR)
 	@echo "CC $@"
 	@$(CC) $(CFLAGS) -o $@ $(FIPC_FWAY_SRCS) $(LIBFIPC_HOST) $(LDFLAGS)
+
+# === VFS metrics test ===
+FIPC_VFS_SRCS := fipc_sys_vfs_metrics.c \
+	$(ROOT)/src/user/sys/fipc_sys_pub_vfs.c
+
+$(BIN_DIR)/fipc_sys_vfs_metrics: $(FIPC_VFS_SRCS) $(LIBFIPC_HOST) | $(BIN_DIR)
+	@echo "CC $@"
+	@$(CC) $(CFLAGS) -o $@ $(FIPC_VFS_SRCS) $(LIBFIPC_HOST) $(LDFLAGS)
 
 $(BIN_DIR):
 	@mkdir -p $(BIN_DIR)
