--- a/tests/Makefile
+++ b/tests/Makefile
@@ -25,9 +25,11 @@ TESTS := fipc_remote_loopback \
 	fipc_sys_kernel_metrics \
 	fipc_sys_futuraway_metrics \
 	fipc_sys_vfs_metrics \
-fipc_kernel_flowcontrol \
+	fipc_kernel_flowcontrol \
 	fipc_kernel_caps_quota \
-	fipc_kernel_vecsend
+	fipc_kernel_vecsend \
+	fipc_timer_deadline \
+	fipc_reply_pi
 
 .PHONY: all clean $(TESTS)
 
@@ -153,6 +155,14 @@ $(BIN_DIR)/fipc_kernel_caps_quota: fipc_kernel_caps_quota.c $(LIBFIPC_HOST) | $(
 $(BIN_DIR)/fipc_kernel_vecsend: fipc_kernel_vecsend.c $(LIBFIPC_HOST) | $(BIN_DIR)
 	@echo "CC $@"
 	@$(CC) $(CFLAGS) -o $@ fipc_kernel_vecsend.c $(LIBFIPC_HOST) $(LDFLAGS)
+
+$(BIN_DIR)/fipc_timer_deadline: fipc_timer_deadline.c $(LIBFIPC_HOST) | $(BIN_DIR)
+	@echo "CC $@"
+	@$(CC) $(CFLAGS) -o $@ fipc_timer_deadline.c $(LIBFIPC_HOST) $(LDFLAGS)
+
+$(BIN_DIR)/fipc_reply_pi: fipc_reply_pi.c $(LIBFIPC_HOST) | $(BIN_DIR)
+	@echo "CC $@"
+	@$(CC) $(CFLAGS) -o $@ fipc_reply_pi.c $(LIBFIPC_HOST) $(LDFLAGS)
 
 # === syswatch smoke helper ===
 $(BIN_DIR)/fipc_syswatch_smoke: fipc_syswatch_smoke.c \
