--- a/tests/Makefile
+++ b/tests/Makefile
@@ -31,7 +31,8 @@ TESTS := fipc_remote_loopback \
 	fipc_timer_deadline \
 	fipc_reply_pi \
 	fipc_cap_revoke \
-	fipc_rate_limit
+	fipc_rate_limit \
+	fipc_admin_ops
 
 .PHONY: all clean $(TESTS)
 
@@ -173,6 +174,10 @@ $(BIN_DIR)/fipc_cap_revoke: fipc_cap_revoke.c $(LIBFIPC_HOST) | $(BIN_DIR)
 $(BIN_DIR)/fipc_rate_limit: fipc_rate_limit.c $(LIBFIPC_HOST) | $(BIN_DIR)
 	@echo "CC $@"
 	@$(CC) $(CFLAGS) -o $@ fipc_rate_limit.c $(LIBFIPC_HOST) $(LDFLAGS)
+
+$(BIN_DIR)/fipc_admin_ops: fipc_admin_ops.c $(LIBFIPC_HOST) | $(BIN_DIR)
+	@echo "CC $@"
+	@$(CC) $(CFLAGS) -o $@ fipc_admin_ops.c $(LIBFIPC_HOST) $(LDFLAGS)
 
 # === syswatch smoke helper ===
 $(BIN_DIR)/fipc_syswatch_smoke: fipc_syswatch_smoke.c \
