--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,9 +1,8 @@
 ROOT := ..
-INCLUDES := -I$(ROOT)/include -I$(ROOT) -I$(ROOT)/src/user/sys -I$(ROOT)/src/user/netd -I$(ROOT)/subsystems/futura_fs
+INCLUDES := -I$(ROOT)/include -I$(ROOT) -I$(ROOT)/src/user/sys -I$(ROOT)/src/user/netd
 CFLAGS := -std=c2x -Wall -Wextra -Werror -g -O2 $(INCLUDES)
 LDFLAGS :=
 LIBFIPC_HOST := $(ROOT)/build/lib/libfipc_host.a
-LIBFUTFS := $(ROOT)/build/lib/libfutfs.a
 BIN_DIR := $(ROOT)/build/tools
 
 TOOLS := syswatch ctltool mkfutfs
@@ -16,9 +15,6 @@ $(BIN_DIR):
 $(LIBFIPC_HOST):
 	@$(MAKE) -C $(ROOT)/host/transport
 
-$(LIBFUTFS):
-	@$(MAKE) -C $(ROOT)/subsystems/futura_fs
-
 $(BIN_DIR)/syswatch: syswatch.c \
 	$(ROOT)/src/user/sys/fipc_sys_sub.c \
 	$(LIBFIPC_HOST) | $(BIN_DIR)
@@ -29,8 +25,8 @@ $(BIN_DIR)/ctltool: ctltool.c $(LIBFIPC_HOST) | $(BIN_DIR)
 	@echo "CC $@"
 	@$(CC) $(CFLAGS) -o $@ ctltool.c $(LIBFIPC_HOST) $(LDFLAGS)
 
-$(BIN_DIR)/mkfutfs: mkfutfs.c $(LIBFUTFS) | $(BIN_DIR)
+$(BIN_DIR)/mkfutfs: mkfutfs.c | $(BIN_DIR)
 	@echo "CC $@"
-	@$(CC) $(CFLAGS) -o $@ mkfutfs.c $(LIBFUTFS) $(LDFLAGS)
+	@$(CC) $(CFLAGS) -o $@ mkfutfs.c $(LDFLAGS)
 
 .PHONY: all
