--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,7 +5,7 @@ LDFLAGS :=
 LIBFIPC_HOST := $(ROOT)/build/lib/libfipc_host.a
 BIN_DIR := $(ROOT)/build/tools
 
-TOOLS := syswatch ctltool mkfutfs
+TOOLS := syswatch ctltool mkfutfs fsck.futfs
 
 all: $(addprefix $(BIN_DIR)/,$(TOOLS))
 
@@ -28,5 +28,9 @@ $(BIN_DIR)/ctltool: ctltool.c $(LIBFIPC_HOST) | $(BIN_DIR)
 $(BIN_DIR)/mkfutfs: mkfutfs.c | $(BIN_DIR)
 	@echo "CC $@"
 	@$(CC) $(CFLAGS) -o $@ mkfutfs.c $(LDFLAGS)
+
+$(BIN_DIR)/fsck.futfs: fsck.futfs.c | $(BIN_DIR)
+	@echo "CC $@"
+	@$(CC) $(CFLAGS) -o $@ fsck.futfs.c $(LDFLAGS)
 
 .PHONY: all
