--- a/src/user/clients/wl-simple/Makefile
+++ b/src/user/clients/wl-simple/Makefile
@@ -35,8 +35,8 @@ ifeq ($(DEBUG_WAYLAND),1)
 CFLAGS += -DDEBUG_WAYLAND
 endif
 
-LDFLAGS := -nostdlib -T $(LDSCRIPT)
-LDLIBS := $(LIBFUTURA) $(WAYLAND_LIBS)
+LDFLAGS := -nostdlib -T $(LDSCRIPT) $(WAYLAND_LDFLAGS)
+LDLIBS := $(WAYLAND_LIBS) $(LIBFUTURA)
 
 .PHONY: all clean
 
