--- a/src/user/compositor/futura-wayland/Makefile
+++ b/src/user/compositor/futura-wayland/Makefile
@@ -8,7 +8,7 @@ BIN_DIR := $(BUILD_ROOT)/bin/user
 include $(ROOT)/mk/wayland.mk
 
 TARGET := $(BIN_DIR)/futura-wayland
-SRCS := main.c comp.c shm_backend.c xdg_shell.c output.c seat.c cursor.c ui_text.c shadow.c
+SRCS := main.c comp.c shm_backend.c xdg_shell.c output.c seat.c cursor.c ui_text.c shadow.c data_device.c
 
 OUT ?= $(BUILD_ROOT)/generated/wayland
 $(eval $(call wayland_proto_server,$(ROOT)/protocols/xdg-shell.xml,compositor))
@@ -54,7 +54,7 @@ $(OBJ_DIR)/%.o: %.c $(WAYLAND_GEN_HDRS) | $(OBJ_DIR)
 	@echo "CC $<"
 	@$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
-$(OBJ_DIR)/xdg-shell-protocol.o: $(WAYLAND_GEN_SRCS) $(WAYLAND_GEN_HDRS) | $(OBJ_DIR)
+$(OBJ_DIR)/xdg-shell-protocol.o: $(OUT)/compositor/xdg-shell-protocol.c $(WAYLAND_GEN_HDRS) | $(OBJ_DIR)
 	@echo "CC $<"
 	@$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
